pypiserver-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pypiserver-deployment
  labels:
    app: pypiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pypiserver
  template:
    metadata:
      labels:
        app: pypiserver
    spec:
      containers:
      - name: pypiserver
        image: pypiserver/pypiserver:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: pypi-packages
          mountPath: /data/packages
      volumes:
      - name: pypi-packages
        hostPath:
          # Path on the hosts where the packages are stored
          path: /var/pypi
