pypiserver-nodeport-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pypiserver-service
spec:
  selector:
    app: pypiserver
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    # Port where the pypiserver will be reachable
    nodePort: 30036
    protocol: TCP
