pypiserver-tls-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pypiserver-deployment
  labels:
    app: pypiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pypiserver
  template:
    metadata:
      labels:
        app: pypiserver
    spec:
      containers:
      - name: nginx
        image: peterableda/nginx-ssl-proxy
        volumeMounts:
          - name: ssl
            readOnly: true
            mountPath: /etc/secrets
        ports:
        - containerPort: 80
        - containerPort: 443
      - name: pypiserver
        image: pypiserver/pypiserver:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: pypi-packages
          mountPath: /data/packages
      volumes:
      - name: pypi-packages
        hostPath:
          # Path on the hosts where the packages are stored
          path: /var/pypi
      - name: ssl
        secret:
          # Kubernetes secret with dhparam, proxycert, and proxykey
          secretName: pypiserver-ssl-secret
---
apiVersion: v1
kind: Service
metadata:
  name: pypiserver-service
spec:
  selector:
    app: pypiserver
  type: NodePort
  ports:
  - name: https
    port: 443
    targetPort: 443
    # Port where the pypiserver will be reachable
    nodePort: 30038
    protocol: TCP
